@@ -1,0 +1,2 @@
+To avoid occasional spurious test_idle failures on slower machines, 
+increase the ``hover_delay`` in test_tooltip.
